Update Mistakes I've made with time series.ipynb

--- a/Mistakes I've made with time series.ipynb
+++ b/Mistakes I've made with time series.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####What the hell is a (S)ARIMA Model\n",
+    "####What is a (S)ARIMA Model\n",
     "* ARIMA = Generalized case of ARMA model, Autoregressive (AR), Moving Average (MA) model\n",
     "    * I = Integrated = Differencing step, Y2 - Y1\n",
     "    * Autoregressive Integrated Moving Average Model\n",
